fixes images not showing / css

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,13 +1,13 @@
 /* apply a natural box layout model to all elements, but allowing components to change */
 html {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 *,
 *:before,
 *:after {
   -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+  box-sizing: inherit;
 }
 html,
 body {
@@ -19,20 +19,19 @@ body {
 
 /*base site made around  360px */
 
-body{
+body {
   /* change file here for different background image */
-  background-image: url(/assets/background.png);
+  background-image: url(../assets/background.png);
   background-size: cover;
-  font-family: 'Press Start 2P', cursive;
-
+  font-family: "Press Start 2P", cursive;
 }
 
 /* HEADER STYLES  */
 .main-header {
   display: grid;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   justify-items: center;
   text-align: center;
   /* height: 5%; */
@@ -45,7 +44,7 @@ body{
   padding: 0;
 }
 
-.main-header div{
+.main-header div {
   background: white;
   padding-top: 5px;
   padding-bottom: 5px;
@@ -59,68 +58,67 @@ body{
   height: 95%;
   width: 100%;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 /* styling for the over game board */
 .boardy {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    margin-top: 1%;
-    width: 100%;
-    height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -ms-flex-line-pack: center;
+  align-content: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  margin-top: 1%;
+  width: 100%;
+  height: 100%;
 }
 
 /* styling for individual images (imageCard) */
 .memtile {
   -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
+  transform-style: preserve-3d;
   width: 20%;
-  height: 20vw; 
-  -webkit-transform: scale(20%); 
-          transform: scale(20%);
+  height: 20vw;
+  -webkit-transform: scale(20%);
+  transform: scale(20%);
   margin: 1% 1%;
   -webkit-transition: all 500ms ease-out;
   transition: all 500ms ease-out;
-
 }
 /* have the front/back fill the entire area of the card */
 .back,
 .front {
   height: 100%;
   width: 100%;
-  -webkit-box-shadow: -13px 11px 25px 1px rgba(0,0,0,0.55);
-          box-shadow: -13px 11px 25px 1px rgba(0,0,0,0.55);
+  -webkit-box-shadow: -13px 11px 25px 1px rgba(0, 0, 0, 0.55);
+  box-shadow: -13px 11px 25px 1px rgba(0, 0, 0, 0.55);
   border-radius: 10px;
   position: absolute;
   -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .front {
   background-position: center;
-    background-repeat: no-repeat;
-    background-image: url(/assets/tiles.png);
-    background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../assets/tiles.png);
+  background-size: cover;
 }
 
 .back {
   -webkit-transform: rotateY(180deg);
-          transform: rotateY(180deg);
+  transform: rotateY(180deg);
   background-color: black;
-  background-size:cover;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
 }
@@ -128,16 +126,14 @@ body{
 /* adds styling when an image is clicked */
 .clicked {
   -webkit-transform: rotateY(180deg);
-          transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
-
 
 .paired .front {
-  visibility: hidden;  
-
+  visibility: hidden;
 }
 
-.modal  {
+.modal {
   color: black;
   position: absolute;
   left: 0;
@@ -150,81 +146,77 @@ body{
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-transition: all 200ms ease-in-out;
   transition: all 200ms ease-in-out;
   border-radius: 10px;
 }
-.modalText{
+.modalText {
   top: 15%;
   text-align: center;
 }
 
-.modal-hidden  {
+.modal-hidden {
   display: none;
   -webkit-transform: scale(0.00001);
-          transform: scale(0.00001);
+  transform: scale(0.00001);
 }
 
 /* button styles for buttons */
 .button-styles {
   border: none;
   text-transform: uppercase;
-  font-size: 1em;
-  background: rgba(255, 255, 255, 0.2);
+  background-image: url(../assets/buttonImg.png);
   color: rgba(0, 0, 0, 1);
-  background-repeat: no-repeat;
   background-size: 100% 100%;
   cursor: pointer;
   margin: 10px;
-	outline: none;
-	position: relative;
-
+  padding: 10px;
+  outline: none;
+  position: relative;
 }
 
-  button:hover{
-    color: white;
-    background: black;
-
-  }
-  
+button:hover {
+  color: white;
+  background: black;
+}
 
 /* ================================== */
 /* next media width styling */
 @media screen and (min-width: 360px) {
-  .main-header{
+  .main-header {
     padding-bottom: 0;
     margin-bottom: 0;
   }
 
-  .boardy{
+  .boardy {
     display: grid;
     align-content: flex-start;
   }
-  
+
   .boardy::before {
-    content: '';
+    content: "";
     width: 0;
     padding-bottom: 90%;
     grid-row: 8 / 8;
-    grid-column: 4 / 4;
+    grid-column: 4/ 4;
   }
-  
+
   .memtile {
     width: 4.5rem;
     height: 4.5rem;
   }
 
-.button-styles {
-  width: 40%;
+  .button-styles {
+    width: 40%;
   }
 }
 
@@ -234,11 +226,6 @@ body{
   .game-box {
     height: auto;
     align-content: center;
-  }
-
-  .boardy::before {
-    grid-row: 8 / 8;
-    grid-column: 6 / 6;
   }
 
   .memtile {
@@ -253,19 +240,11 @@ body{
 /* ================================== */
 /* next media width styling */
 @media screen and (min-width: 1200px) {
-    
-  .boardy::before {
-    grid-row: 8 / 8;
-    grid-column: 6 / 6;
-  }
-  
-  .button-styles{
+  .button-styles {
     font-size: large;
   }
   .memtile {
     width: 6rem;
     height: 6rem;
   }
-
 }
-
